--- a/views/remittance.hbs
+++ b/views/remittance.hbs
@@ -3,18 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>errorLogs</title>
+  <title>송 수금 내역</title>
 </head>
 
 <body>
   <script type="text/javascript">
     const sse = new EventSource('/sse');
-    sse.addEventListener('error', ({ data }) => {
+
+    sse.addEventListener('send', ({ data }) => {
 
       const parsedData = JSON.parse(data);
 
       const message = document.createElement('div');
-      message.innerText = parsedData.sendIp + ' : ' + parsedData.status + '  ' + parsedData.message;
+      message.innerText = parsedData.account.accountId + ' -> ' + parsedData.reciverId + '   ' + parsedData.money + '원 송금';
       document.body.appendChild(message);
     })
   </script>
