--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,7 +58,16 @@
                 </div>
               </div>
               <div class="transaction-list list-row">
-                <div class="list-item">a</div>
+                <div class="list-item">
+                  <img class="send-pic" src="/send.svg">
+                  <div>
+                    a
+                  </div>
+                </div>
+                <div class="list-item">
+                  <img class="send-pic" src="/receive.svg">
+                  a
+                </div>
               </div>
             </div>
           </div>
