ADD error log box

--- a/public/index.css
+++ b/public/index.css
@@ -52,7 +52,14 @@ h3 {
   margin: 0 -15px 0 -15px;
 }
 
-.boxs, .staticBox, .transaction-history {
+@media (min-width: 768px) {
+  .boxs {
+      flex: 0 0 41.6666666667%;
+      max-width: 41.6666666667%;
+  }
+}
+
+.boxs, .staticBox, .transaction-history, .col-md-7 {
   position: relative;
   width: 100%;
   padding: 0 15px 0 15px;
@@ -162,6 +169,7 @@ h3 {
 
 .pb3 {
   padding: 1.25rem;
+  margin-bottom: 1rem;
   background-color: rgba(19,24,44,.03);
   border-bottom: 1px solid rgba(19,24,44,.125);
 }
@@ -226,4 +234,30 @@ h3 {
 
 .text-muted {
   color: #99a0ac !important;
+}
+
+@media (min-width: 768px) {
+  .col-md-7 {
+      flex: 0 0 58.3333333333%;
+      max-width: 58.3333333333%;
+  }
+}
+
+.p-3-4 {
+  padding: 1.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem !important;
+}
+
+.p-2 {
+  height: 332px;
+}
+
+.error-box {
+  padding-left: 0;
+  padding-right: 0;
+  max-height: 332px;
+  overflow: scroll;
 }
