--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,7 +49,6 @@
             </div>
           </div>
 
-
           <div class="transaction-history">
             <div class="card pb-3">
               <div class="pb3">
@@ -68,19 +67,60 @@
                   </div>
                 </div>
                 <div class="list-item">
-                  <img class="send-pic" src="/send.svg">
+                  <img class="send-pic" src="/receive.svg">
                   <div class="flex">
-                    0101010101011 &#45;> 0101010101000 님이 송금하셨습니다
+                    0101010101011 <&#45; 0101010101000 님이 송금 받으셨습니다</div>
+                  </div>
+                  <div class="list-item">
+                    <img class="send-pic" src="/receive.svg">
+                    <div class="flex">
+                      0101010101011 <&#45; 0101010101000 님이 송금 받으셨습니다</div>
+                    </div>
+                    <div class="list-item">
+                      <img class="send-pic" src="/receive.svg">
+                      <div class="flex">
+                        0101010101011 <&#45; 0101010101000 님이 송금 받으셨습니다</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-7">
+              <div class="card">
+                <div class="p-3-4">
+                  <div class="d-flex mb-3">
+                    <div>
+                      <h3>서버 에러 로그</h3>
+                      <small class="text-muted">
+                        서버에서 생기는 로그를 밝혀줍니다
+                      </small>
+                    </div>
+                  </div>
+                  <div class="p-2">
+                    <div class="error-box list-row">
+
+                      <div class="list-item">
+                        <div>
+                          <h3>401</h3>
+                        </div>
+                        <div>
+                          <h3>127.0.0.1</h3>
+                          <small class="text-muted">/auth/login</small>
+                        </div>
+                        <div>
+                          <span>id 또는 pw가 일치하지 않습니다</span>
+                        </div>
+                      </div>
+
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-  </div>
 </body>
 
 </html>
