--- a/views/index.hbs
+++ b/views/index.hbs
@@ -99,21 +99,7 @@
                     </div>
                   </div>
                   <div class="p-2">
-                    <div class="error-box list-row">
-
-                      <div class="list-item">
-                        <div>
-                          <h3>401</h3>
-                        </div>
-                        <div>
-                          <h3>127.0.0.1</h3>
-                          <small class="text-muted">/auth/login</small>
-                        </div>
-                        <div>
-                          <span>id 또는 pw가 일치하지 않습니다</span>
-                        </div>
-                      </div>
-
+                    <div id="error-box" class="error-box list-row">
                     </div>
                   </div>
                 </div>
@@ -121,6 +107,9 @@
             </div>
           </div>
         </div>
+
+        <script type="text/javascript" src="/index.js"></script>
+        <script type="text/javascript" src="/components/errorLogs.js"></script>
 </body>
 
 </html>
