--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,16 +59,7 @@
                   </div>
                 </div>
               </div>
-              <div class="transaction-list list-row">
-
-                <send-log accountId="0101010101011" receiverId="0101010101011" money="2000"></send-log>
-                <receive-log accountId="0101010101000" senderId="0101010101000" money="1000"></receive-log>
-                <send-log accountId="0101010101011" receiverId="0101010101011" money="2000"></send-log>
-                <receive-log accountId="0101010101000" senderId="0101010101000" money="1000"></receive-log>
-                <send-log accountId="0101010101011" receiverId="0101010101011" money="2000"></send-log>
-                <receive-log accountId="0101010101000" senderId="0101010101000" money="1000"></receive-log>
-
-              </div>
+              <div id="transaction-list" class="transaction-list list-row"></div>
             </div>
           </div>
         </div>
@@ -86,8 +77,7 @@
               </div>
             </div>
             <div class="p-2">
-              <div id="error-box" class="error-box list-row">
-              </div>
+              <div id="error-box" class="error-box list-row"></div>
             </div>
           </div>
         </div>
