--- a/public/index.css
+++ b/public/index.css
@@ -25,7 +25,7 @@ html {
   -webkit-tap-highlight-color: rgba(19,24,44,0);
 }
 
-h3, h4 {
+h2, h3, h4 {
   margin: 0;
   padding: 0;
 }
@@ -279,4 +279,9 @@ h3, h4 {
 .list-item-padding {
   padding-left: 2rem !important;
   padding-right: 2rem !important;
+}
+
+.user-card-body {
+  padding-top: .65rem;
+  padding-bottom: .65rem;
 }
