--- a/views/index.hbs
+++ b/views/index.hbs
@@ -83,39 +83,25 @@
         </div>
       </div>
 
-      <div class="transaction-history">
-        <div class="card pb-3">
-          <div class="pb3">
-            <div class="pb3-header">
-              <div>
-                <h3>유저 내역</h3>
-                <small class="text-muted">현재 서비스를 이용하고 있는 유저들과 유저들의 돈을 표시합니다</small>
-              </div>
+      <div class="staticBox">
+        <div class="card">
+          <div class="card-header no-border d-flex">
+            <span class="flex"></span>
+            <div>
+              <h2 class="align-item-center">무야홍</h2>
+              <small class="text-muted">01012345678</small>
             </div>
+            <span class="flex"></span>
+            {{!-- <img class="refresh-button" src="/refresh.svg"> --}}
           </div>
-          <div id="user-list" class="user-list list-row">
-            <div class="list-item list-item-padding">
-              <div>
-                <h3>무야홍</h3>
-                <small class="text-muted">01012345678</small>
+          <div class="card-body user-card-body">
+            <div class="money-count">
+              <span class="flex"></span>
+              <div class="align-item-center">
+                <small class="text-muted">보유 금액</small>
+                <h3>10000원</h3>
               </div>
               <span class="flex"></span>
-              <div>
-                <h3 class="align-item-center">
-                  1
-                </h3>
-                <small class="text-muted">보유한 카카오뱅크 계좌</small>
-              </div>
-              <div class="align-item-center">
-                <h3>
-                  1
-                </h3>
-                <small class="text-muted">보유한 계좌</small>
-              </div>
-              <div class="align-item-center">
-                <h3>1230320원</h3>
-                <small class="text-muted">보유한 금액</small>
-              </div>
             </div>
           </div>
         </div>
