Fix: user card to web component

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -83,30 +83,8 @@
         </div>
       </div>
 
-      <div class="staticBox">
-        <div class="card">
-          <div class="card-header no-border d-flex">
-            <span class="flex"></span>
-            <div>
-              <h2 class="align-item-center">무야홍</h2>
-              <small class="text-muted">01012345678</small>
-            </div>
-            <span class="flex"></span>
-            {{!-- <img class="refresh-button" src="/refresh.svg"> --}}
-          </div>
-          <div class="card-body user-card-body">
-            <div class="money-count">
-              <span class="flex"></span>
-              <div class="align-item-center">
-                <small class="text-muted">보유 금액</small>
-                <h3>10000원</h3>
-              </div>
-              <span class="flex"></span>
-            </div>
-          </div>
-        </div>
-      </div>
-
+      <user-info name="무야홍" phoneNum="01023954337" money="100"></user-info>
+      <user-info name="무야홍" phoneNum="01023954337" money="100"></user-info>
     </div>
   </div>
 
@@ -114,6 +92,7 @@
   <script type="text/javascript" src="/components/errorLogs.js"></script>
   <script type="text/javascript" src="/components/receiveLog.js"></script>
   <script type="text/javascript" src="/components/sendLog.js"></script>
+  <script type="text/javascript" src="/components/userInfo.js"></script>
 </body>
 
 </html>
