--- a/public/index.css
+++ b/public/index.css
@@ -285,3 +285,11 @@ h2, h3, h4 {
   padding-top: .65rem;
   padding-bottom: .65rem;
 }
+
+user-info { 
+  width: 50%;
+}
+
+.user-box {
+  max-width: 100% !important;
+}
