--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
 <body>
 
   <div class="padding">
-    <div class="row">
+    <div id="rows" class="row">
       <div class="boxs">
         <div class="row">
 
@@ -83,7 +83,7 @@
         </div>
       </div>
 
-      <user-info name="무야홍" phoneNum="01023954337" money="100"></user-info>
+      <user-info name="무야홍" phoneNum="01023954337" money="10000"></user-info>
       <user-info name="무야홍" phoneNum="01023954337" money="100"></user-info>
     </div>
   </div>
