Add: get bank All money

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,7 +25,7 @@
               <div class="card-body">
                 <div class="money-count">
                   <span class="flex"></span>
-                  <span class="money-number">1000</span>
+                  <span id="money" class="money-number">0</span>
                   <span class="money-won">원</span>
                 </div>
               </div>
