ADD ajax bank all money

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>나는 통계를 보여줘요 안농</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/index.css" />
   <link rel="components" href="/components/card.html" />
 </head>
